// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evaluateDirectionAndConfidence > applies forecast-only 49, required-layer stale 59 and strictest multiple reviewed caps 1`] = `
{
  "capped": {
    "confidence": {
      "appliedCaps": [
        {
          "code": "COVERAGE_GAP",
          "maximum": 35,
          "reason": "已审核策略对覆盖缺口 test-control-gap 应用上限 35",
        },
        {
          "code": "MISSING_REQUIRED_LAYER",
          "maximum": 40,
          "reason": "已审核策略对缺少必需层 physical、balance、control 应用上限 40",
        },
        {
          "code": "REQUIRED_LAYER_STALE",
          "maximum": 59,
          "reason": "必需证据层全部过期：market，按 PRD 将上限设为 59",
        },
        {
          "code": "UNEXPLAINED_CONFLICT",
          "maximum": 69,
          "reason": "当前同时存在支持与反向证据（包括同一来源内的矛盾），且本版策略未定义可审计的冲突解释，按 PRD 将上限设为 69",
        },
      ],
      "components": {
        "agreement": 20,
        "coverage": 33,
        "freshness": 29,
        "sourceQuality": 100,
      },
      "explanations": {
        "agreement": {
          "ignoredContextEvidenceIds": [],
          "refuteEvidenceIds": [
            "evidence-weather-refute-current",
          ],
          "refuteWeight": 30,
          "supportEvidenceIds": [
            "evidence-forecast-current",
          ],
          "supportWeight": 20,
        },
        "coverage": {
          "missingLayers": [
            "physical",
            "balance",
            "control",
          ],
          "presentLayers": [
            "forecast",
            "weather",
          ],
          "requiredLayers": [
            "forecast",
            "weather",
            "physical",
            "balance",
            "market",
            "control",
          ],
          "staleLayers": [
            "market",
          ],
        },
        "freshness": {
          "currentEvidenceIds": [
            "evidence-forecast-current",
            "evidence-weather-refute-current",
          ],
          "freshSelectorIds": [
            "forecast",
            "weather-refute",
          ],
          "lateSelectorIds": [],
          "missingSelectorIds": [
            "balance",
            "control",
            "physical",
            "weather-support",
          ],
          "staleSelectorIds": [
            "market",
          ],
        },
        "sourceQuality": {
          "currentEvidenceIds": [
            "evidence-forecast-current",
            "evidence-weather-refute-current",
          ],
          "tierScores": {
            "A": 100,
            "B": 80,
            "C": 50,
          },
        },
      },
      "finalScore": 35,
      "policyVersion": "test-confidence-v1",
      "reasons": [
        "agreement 使用对称净一致度 |support-refute|/(support+refute)，当前为 20",
        "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
        "已审核策略对缺少必需层 physical、balance、control 应用上限 40",
        "已审核策略对覆盖缺口 test-control-gap 应用上限 35",
        "当前同时存在支持与反向证据（包括同一来源内的矛盾），且本版策略未定义可审计的冲突解释，按 PRD 将上限设为 69",
        "必需证据层全部过期：market，按 PRD 将上限设为 59",
        "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
      ],
      "roundingRule": "round_half_up_after_weighted_sum",
      "status": "available",
      "weightedScore": 46,
    },
    "cutoff": "2026-09-08T12:00:00.000Z",
    "direction": {
      "direction": "mixed",
      "marketScope": "test scoped market",
      "matchedDirections": [
        "bullish",
        "bearish",
      ],
      "methodologyVersion": "test-reviewed-v1",
      "policyVersion": "test-direction-v1",
      "reasons": [
        "命中多个不同方向 bullish/bearish，按固定冲突规则解析为 mixed",
      ],
      "regionDefinitionVersion": "test-region-v1",
      "ruleHits": [
        {
          "evidenceIds": [
            "evidence-weather-refute-current",
          ],
          "reason": "规则 refute-weather 以 refutes stance 命中，并由审核策略显式映射为 bearish",
          "ruleId": "refute-weather",
        },
        {
          "evidenceIds": [
            "evidence-forecast-current",
          ],
          "reason": "规则 support-forecast 以 supports stance 命中，并由审核策略显式映射为 bullish",
          "ruleId": "support-forecast",
        },
      ],
      "ruleRejections": [
        {
          "code": "NOT_MATCHED",
          "reason": "规则 invalidate-control 未匹配当前证据",
          "ruleId": "invalidate-control",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 relief-weather 未匹配当前证据",
          "ruleId": "relief-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-balance 未匹配当前证据",
          "ruleId": "support-balance",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-market 未匹配当前证据",
          "ruleId": "support-market",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-physical 未匹配当前证据",
          "ruleId": "support-physical",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-weather 未匹配当前证据",
          "ruleId": "support-weather",
        },
      ],
      "status": "available",
      "target": "test scoped target",
      "thesisId": "TEST-01",
      "timeHorizon": "next test horizon",
    },
    "marketScope": "test scoped market",
    "methodologyVersion": "test-reviewed-v1",
    "regionDefinitionVersion": "test-region-v1",
    "stage": "watch",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
  "forecast": {
    "confidence": {
      "appliedCaps": [
        {
          "code": "FORECAST_ONLY",
          "maximum": 49,
          "reason": "只有气候预测、没有区域天气或后续传导观测，按 PRD 将置信度上限设为 49",
        },
      ],
      "components": {
        "agreement": 100,
        "coverage": 17,
        "freshness": 14,
        "sourceQuality": 100,
      },
      "explanations": {
        "agreement": {
          "ignoredContextEvidenceIds": [],
          "refuteEvidenceIds": [],
          "refuteWeight": 0,
          "supportEvidenceIds": [
            "evidence-forecast-current",
          ],
          "supportWeight": 20,
        },
        "coverage": {
          "missingLayers": [
            "weather",
            "physical",
            "balance",
            "market",
            "control",
          ],
          "presentLayers": [
            "forecast",
          ],
          "requiredLayers": [
            "forecast",
            "weather",
            "physical",
            "balance",
            "market",
            "control",
          ],
          "staleLayers": [],
        },
        "freshness": {
          "currentEvidenceIds": [
            "evidence-forecast-current",
          ],
          "freshSelectorIds": [
            "forecast",
          ],
          "lateSelectorIds": [],
          "missingSelectorIds": [
            "balance",
            "control",
            "market",
            "physical",
            "weather-refute",
            "weather-support",
          ],
          "staleSelectorIds": [],
        },
        "sourceQuality": {
          "currentEvidenceIds": [
            "evidence-forecast-current",
          ],
          "tierScores": {
            "A": 100,
            "B": 80,
            "C": 50,
          },
        },
      },
      "finalScore": 49,
      "policyVersion": "test-confidence-v1",
      "reasons": [
        "agreement 使用对称净一致度 |support-refute|/(support+refute)，当前为 100",
        "只有气候预测、没有区域天气或后续传导观测，按 PRD 将置信度上限设为 49",
        "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
        "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
      ],
      "roundingRule": "round_half_up_after_weighted_sum",
      "status": "available",
      "weightedScore": 54,
    },
    "cutoff": "2026-09-08T12:00:00.000Z",
    "direction": {
      "direction": "bullish",
      "marketScope": "test scoped market",
      "matchedDirections": [
        "bullish",
      ],
      "methodologyVersion": "test-reviewed-v1",
      "policyVersion": "test-direction-v1",
      "reasons": [],
      "regionDefinitionVersion": "test-region-v1",
      "ruleHits": [
        {
          "evidenceIds": [
            "evidence-forecast-current",
          ],
          "reason": "规则 support-forecast 以 supports stance 命中，并由审核策略显式映射为 bullish",
          "ruleId": "support-forecast",
        },
      ],
      "ruleRejections": [
        {
          "code": "NOT_MATCHED",
          "reason": "规则 invalidate-control 未匹配当前证据",
          "ruleId": "invalidate-control",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 refute-weather 未匹配当前证据",
          "ruleId": "refute-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 relief-weather 未匹配当前证据",
          "ruleId": "relief-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-balance 未匹配当前证据",
          "ruleId": "support-balance",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-market 未匹配当前证据",
          "ruleId": "support-market",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-physical 未匹配当前证据",
          "ruleId": "support-physical",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-weather 未匹配当前证据",
          "ruleId": "support-weather",
        },
      ],
      "status": "available",
      "target": "test scoped target",
      "thesisId": "TEST-01",
      "timeHorizon": "next test horizon",
    },
    "marketScope": "test scoped market",
    "methodologyVersion": "test-reviewed-v1",
    "regionDefinitionVersion": "test-region-v1",
    "stage": "watch",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
}
`;

exports[`evaluateDirectionAndConfidence > calculates all four components with fixed 30/25/25/20 weights and half-up rounding 1`] = `
{
  "confidence": {
    "appliedCaps": [],
    "components": {
      "agreement": 100,
      "coverage": 100,
      "freshness": 72,
      "sourceQuality": 83,
    },
    "explanations": {
      "agreement": {
        "ignoredContextEvidenceIds": [
          "evidence-control-current",
        ],
        "refuteEvidenceIds": [],
        "refuteWeight": 0,
        "supportEvidenceIds": [
          "evidence-balance-current",
          "evidence-market-current",
          "evidence-physical-current",
          "evidence-weather-support-current",
        ],
        "supportWeight": 100,
      },
      "coverage": {
        "missingLayers": [],
        "presentLayers": [
          "weather",
          "physical",
          "balance",
          "market",
        ],
        "requiredLayers": [
          "weather",
          "physical",
          "balance",
          "market",
        ],
        "staleLayers": [],
      },
      "freshness": {
        "currentEvidenceIds": [
          "evidence-balance-current",
          "evidence-market-current",
          "evidence-physical-current",
          "evidence-weather-support-current",
        ],
        "freshSelectorIds": [
          "balance",
          "market",
          "weather-support",
        ],
        "lateSelectorIds": [
          "physical",
        ],
        "missingSelectorIds": [
          "weather-refute",
        ],
        "staleSelectorIds": [],
      },
      "sourceQuality": {
        "currentEvidenceIds": [
          "evidence-balance-current",
          "evidence-market-current",
          "evidence-physical-current",
          "evidence-weather-support-current",
        ],
        "tierScores": {
          "A": 100,
          "B": 80,
          "C": 50,
        },
      },
    },
    "finalScore": 89,
    "policyVersion": "test-confidence-v1",
    "reasons": [
      "agreement 使用对称净一致度 |support-refute|/(support+refute)，当前为 100",
      "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
      "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
    ],
    "roundingRule": "round_half_up_after_weighted_sum",
    "status": "available",
    "weightedScore": 89,
  },
  "cutoff": "2026-09-08T12:00:00.000Z",
  "direction": {
    "direction": "bullish",
    "marketScope": "test scoped market",
    "matchedDirections": [
      "bullish",
    ],
    "methodologyVersion": "test-reviewed-v1",
    "policyVersion": "test-direction-v1",
    "reasons": [],
    "regionDefinitionVersion": "test-region-v1",
    "ruleHits": [
      {
        "evidenceIds": [
          "evidence-balance-current",
        ],
        "reason": "规则 support-balance 以 supports stance 命中，并由审核策略显式映射为 bullish",
        "ruleId": "support-balance",
      },
      {
        "evidenceIds": [
          "evidence-market-current",
        ],
        "reason": "规则 support-market 以 supports stance 命中，并由审核策略显式映射为 bullish",
        "ruleId": "support-market",
      },
      {
        "evidenceIds": [
          "evidence-physical-current",
        ],
        "reason": "规则 support-physical 以 supports stance 命中，并由审核策略显式映射为 bullish",
        "ruleId": "support-physical",
      },
      {
        "evidenceIds": [
          "evidence-weather-support-current",
        ],
        "reason": "规则 support-weather 以 supports stance 命中，并由审核策略显式映射为 bullish",
        "ruleId": "support-weather",
      },
    ],
    "ruleRejections": [
      {
        "code": "CONTEXT_ONLY",
        "reason": "规则 invalidate-control 未命中其 refutes 语义所需的正权重非 control 证据，不能产生市场方向",
        "ruleId": "invalidate-control",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 refute-weather 未匹配当前证据",
        "ruleId": "refute-weather",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 relief-weather 未匹配当前证据",
        "ruleId": "relief-weather",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-forecast 未匹配当前证据",
        "ruleId": "support-forecast",
      },
    ],
    "status": "available",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
  "marketScope": "test scoped market",
  "methodologyVersion": "test-reviewed-v1",
  "regionDefinitionVersion": "test-region-v1",
  "stage": "market_confirmed",
  "target": "test scoped target",
  "thesisId": "TEST-01",
  "timeHorizon": "next test horizon",
}
`;

exports[`evaluateDirectionAndConfidence > does not let a support rule consume refutes evidence or an unresolved hit look available 1`] = `
{
  "unresolved": {
    "confidence": {
      "appliedCaps": [],
      "components": {
        "agreement": 100,
        "coverage": 100,
        "freshness": 50,
        "sourceQuality": 100,
      },
      "explanations": {
        "agreement": {
          "ignoredContextEvidenceIds": [],
          "refuteEvidenceIds": [],
          "refuteWeight": 0,
          "supportEvidenceIds": [
            "evidence-weather-support-current",
          ],
          "supportWeight": 30,
        },
        "coverage": {
          "missingLayers": [],
          "presentLayers": [
            "weather",
          ],
          "requiredLayers": [
            "weather",
          ],
          "staleLayers": [],
        },
        "freshness": {
          "currentEvidenceIds": [
            "evidence-weather-support-current",
          ],
          "freshSelectorIds": [
            "weather-support",
          ],
          "lateSelectorIds": [],
          "missingSelectorIds": [
            "weather-refute",
          ],
          "staleSelectorIds": [],
        },
        "sourceQuality": {
          "currentEvidenceIds": [
            "evidence-weather-support-current",
          ],
          "tierScores": {
            "A": 100,
            "B": 80,
            "C": 50,
          },
        },
      },
      "finalScore": 88,
      "policyVersion": "test-confidence-v1",
      "reasons": [
        "agreement 使用对称净一致度 |support-refute|/(support+refute)，当前为 100",
        "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
        "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
      ],
      "roundingRule": "round_half_up_after_weighted_sum",
      "status": "available",
      "weightedScore": 88,
    },
    "cutoff": "2026-09-08T12:00:00.000Z",
    "direction": {
      "direction": "neutral",
      "marketScope": "test scoped market",
      "matchedDirections": [],
      "methodologyVersion": "test-reviewed-v1",
      "policyVersion": "test-direction-v1",
      "reasons": [
        "至少一条已命中规则没有审核后的方向映射，方向结果关闭并保留有范围默认方向",
      ],
      "regionDefinitionVersion": "test-region-v1",
      "ruleHits": [],
      "ruleRejections": [
        {
          "code": "NOT_MATCHED",
          "reason": "规则 invalidate-control 未匹配当前证据",
          "ruleId": "invalidate-control",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 refute-weather 未匹配当前证据",
          "ruleId": "refute-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 relief-weather 未匹配当前证据",
          "ruleId": "relief-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-balance 未匹配当前证据",
          "ruleId": "support-balance",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-forecast 未匹配当前证据",
          "ruleId": "support-forecast",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-market 未匹配当前证据",
          "ruleId": "support-market",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-physical 未匹配当前证据",
          "ruleId": "support-physical",
        },
        {
          "code": "UNRESOLVED_DIRECTION",
          "reason": "规则 support-weather 已按 supports stance 命中，但尚无审核后的方向映射",
          "ruleId": "support-weather",
        },
      ],
      "status": "unavailable",
      "target": "test scoped target",
      "thesisId": "TEST-01",
      "timeHorizon": "next test horizon",
    },
    "marketScope": "test scoped market",
    "methodologyVersion": "test-reviewed-v1",
    "regionDefinitionVersion": "test-region-v1",
    "stage": "weather_realized",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
  "wrongStance": {
    "confidence": {
      "appliedCaps": [],
      "components": {
        "agreement": 100,
        "coverage": 100,
        "freshness": 50,
        "sourceQuality": 100,
      },
      "explanations": {
        "agreement": {
          "ignoredContextEvidenceIds": [],
          "refuteEvidenceIds": [
            "evidence-weather-refute-current",
          ],
          "refuteWeight": 30,
          "supportEvidenceIds": [],
          "supportWeight": 0,
        },
        "coverage": {
          "missingLayers": [],
          "presentLayers": [
            "weather",
          ],
          "requiredLayers": [
            "weather",
          ],
          "staleLayers": [],
        },
        "freshness": {
          "currentEvidenceIds": [
            "evidence-weather-refute-current",
          ],
          "freshSelectorIds": [
            "weather-refute",
          ],
          "lateSelectorIds": [],
          "missingSelectorIds": [
            "weather-support",
          ],
          "staleSelectorIds": [],
        },
        "sourceQuality": {
          "currentEvidenceIds": [
            "evidence-weather-refute-current",
          ],
          "tierScores": {
            "A": 100,
            "B": 80,
            "C": 50,
          },
        },
      },
      "finalScore": 88,
      "policyVersion": "test-confidence-v1",
      "reasons": [
        "agreement 使用对称净一致度 |support-refute|/(support+refute)，当前为 100",
        "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
        "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
      ],
      "roundingRule": "round_half_up_after_weighted_sum",
      "status": "available",
      "weightedScore": 88,
    },
    "cutoff": "2026-09-08T12:00:00.000Z",
    "direction": {
      "direction": "bearish",
      "marketScope": "test scoped market",
      "matchedDirections": [
        "bearish",
      ],
      "methodologyVersion": "test-reviewed-v1",
      "policyVersion": "test-direction-v1",
      "reasons": [],
      "regionDefinitionVersion": "test-region-v1",
      "ruleHits": [
        {
          "evidenceIds": [
            "evidence-weather-refute-current",
          ],
          "reason": "规则 refute-weather 以 refutes stance 命中，并由审核策略显式映射为 bearish",
          "ruleId": "refute-weather",
        },
      ],
      "ruleRejections": [
        {
          "code": "NOT_MATCHED",
          "reason": "规则 invalidate-control 未匹配当前证据",
          "ruleId": "invalidate-control",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 relief-weather 未匹配当前证据",
          "ruleId": "relief-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-balance 未匹配当前证据",
          "ruleId": "support-balance",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-forecast 未匹配当前证据",
          "ruleId": "support-forecast",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-market 未匹配当前证据",
          "ruleId": "support-market",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-physical 未匹配当前证据",
          "ruleId": "support-physical",
        },
        {
          "code": "CONTEXT_ONLY",
          "reason": "规则 support-weather 未命中其 supports 语义所需的正权重非 control 证据，不能产生市场方向",
          "ruleId": "support-weather",
        },
      ],
      "status": "available",
      "target": "test scoped target",
      "thesisId": "TEST-01",
      "timeHorizon": "next test horizon",
    },
    "marketScope": "test scoped market",
    "methodologyVersion": "test-reviewed-v1",
    "regionDefinitionVersion": "test-region-v1",
    "stage": "weather_realized",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
}
`;

exports[`evaluateDirectionAndConfidence > fails closed when the stage result belongs to a different selection cutoff 1`] = `
{
  "confidence": {
    "appliedCaps": [],
    "components": {
      "agreement": 0,
      "coverage": 0,
      "freshness": 0,
      "sourceQuality": 0,
    },
    "explanations": {
      "agreement": {
        "ignoredContextEvidenceIds": [],
        "refuteEvidenceIds": [],
        "refuteWeight": 0,
        "supportEvidenceIds": [
          "evidence-weather-support-current",
        ],
        "supportWeight": 30,
      },
      "coverage": {
        "missingLayers": [],
        "presentLayers": [
          "weather",
        ],
        "requiredLayers": [
          "weather",
        ],
        "staleLayers": [],
      },
      "freshness": {
        "currentEvidenceIds": [
          "evidence-weather-support-current",
        ],
        "freshSelectorIds": [
          "weather-support",
        ],
        "lateSelectorIds": [],
        "missingSelectorIds": [
          "weather-refute",
        ],
        "staleSelectorIds": [],
      },
      "sourceQuality": {
        "currentEvidenceIds": [
          "evidence-weather-support-current",
        ],
        "tierScores": {
          "A": 100,
          "B": 80,
          "C": 50,
        },
      },
    },
    "finalScore": 0,
    "policyVersion": "test-confidence-v1",
    "reasons": [
      "阶段结果与 seed/证据选择的身份、cutoff 或状态不一致",
    ],
    "roundingRule": "round_half_up_after_weighted_sum",
    "status": "unavailable",
    "weightedScore": 0,
  },
  "cutoff": "2026-09-08T12:00:00.000Z",
  "direction": {
    "direction": "neutral",
    "marketScope": "test scoped market",
    "matchedDirections": [],
    "methodologyVersion": "test-reviewed-v1",
    "policyVersion": "test-direction-v1",
    "reasons": [
      "阶段结果与 seed/证据选择的身份、cutoff 或状态不一致",
    ],
    "regionDefinitionVersion": "test-region-v1",
    "ruleHits": [],
    "ruleRejections": [],
    "status": "unavailable",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
  "marketScope": "test scoped market",
  "methodologyVersion": "test-reviewed-v1",
  "regionDefinitionVersion": "test-region-v1",
  "stage": "watch",
  "target": "test scoped target",
  "thesisId": "TEST-01",
  "timeHorizon": "next test horizon",
}
`;

exports[`evaluateDirectionAndConfidence > keeps a price-only result at watch without inventing a numeric price cap 1`] = `
{
  "confidence": {
    "appliedCaps": [],
    "components": {
      "agreement": 100,
      "coverage": 17,
      "freshness": 14,
      "sourceQuality": 100,
    },
    "explanations": {
      "agreement": {
        "ignoredContextEvidenceIds": [],
        "refuteEvidenceIds": [],
        "refuteWeight": 0,
        "supportEvidenceIds": [
          "evidence-market-current",
        ],
        "supportWeight": 30,
      },
      "coverage": {
        "missingLayers": [
          "forecast",
          "weather",
          "physical",
          "balance",
          "control",
        ],
        "presentLayers": [
          "market",
        ],
        "requiredLayers": [
          "forecast",
          "weather",
          "physical",
          "balance",
          "market",
          "control",
        ],
        "staleLayers": [],
      },
      "freshness": {
        "currentEvidenceIds": [
          "evidence-market-current",
        ],
        "freshSelectorIds": [
          "market",
        ],
        "lateSelectorIds": [],
        "missingSelectorIds": [
          "balance",
          "control",
          "forecast",
          "physical",
          "weather-refute",
          "weather-support",
        ],
        "staleSelectorIds": [],
      },
      "sourceQuality": {
        "currentEvidenceIds": [
          "evidence-market-current",
        ],
        "tierScores": {
          "A": 100,
          "B": 80,
          "C": 50,
        },
      },
    },
    "finalScore": 54,
    "policyVersion": "test-confidence-v1",
    "reasons": [
      "agreement 使用对称净一致度 |support-refute|/(support+refute)，当前为 100",
      "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
      "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
    ],
    "roundingRule": "round_half_up_after_weighted_sum",
    "status": "available",
    "weightedScore": 54,
  },
  "cutoff": "2026-09-08T12:00:00.000Z",
  "direction": {
    "direction": "bullish",
    "marketScope": "test scoped market",
    "matchedDirections": [
      "bullish",
    ],
    "methodologyVersion": "test-reviewed-v1",
    "policyVersion": "test-direction-v1",
    "reasons": [],
    "regionDefinitionVersion": "test-region-v1",
    "ruleHits": [
      {
        "evidenceIds": [
          "evidence-market-current",
        ],
        "reason": "规则 support-market 以 supports stance 命中，并由审核策略显式映射为 bullish",
        "ruleId": "support-market",
      },
    ],
    "ruleRejections": [
      {
        "code": "NOT_MATCHED",
        "reason": "规则 invalidate-control 未匹配当前证据",
        "ruleId": "invalidate-control",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 refute-weather 未匹配当前证据",
        "ruleId": "refute-weather",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 relief-weather 未匹配当前证据",
        "ruleId": "relief-weather",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-balance 未匹配当前证据",
        "ruleId": "support-balance",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-forecast 未匹配当前证据",
        "ruleId": "support-forecast",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-physical 未匹配当前证据",
        "ruleId": "support-physical",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-weather 未匹配当前证据",
        "ruleId": "support-weather",
      },
    ],
    "status": "available",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
  "marketScope": "test scoped market",
  "methodologyVersion": "test-reviewed-v1",
  "regionDefinitionVersion": "test-region-v1",
  "stage": "watch",
  "target": "test scoped target",
  "thesisId": "TEST-01",
  "timeHorizon": "next test horizon",
}
`;

exports[`evaluateDirectionAndConfidence > keeps context/control evidence visible without turning it into a direction 1`] = `
{
  "confidence": {
    "appliedCaps": [],
    "components": {
      "agreement": 0,
      "coverage": 17,
      "freshness": 14,
      "sourceQuality": 100,
    },
    "explanations": {
      "agreement": {
        "ignoredContextEvidenceIds": [
          "evidence-control-current",
        ],
        "refuteEvidenceIds": [],
        "refuteWeight": 0,
        "supportEvidenceIds": [],
        "supportWeight": 0,
      },
      "coverage": {
        "missingLayers": [
          "forecast",
          "weather",
          "physical",
          "balance",
          "market",
        ],
        "presentLayers": [
          "control",
        ],
        "requiredLayers": [
          "forecast",
          "weather",
          "physical",
          "balance",
          "market",
          "control",
        ],
        "staleLayers": [],
      },
      "freshness": {
        "currentEvidenceIds": [
          "evidence-control-current",
        ],
        "freshSelectorIds": [
          "control",
        ],
        "lateSelectorIds": [],
        "missingSelectorIds": [
          "balance",
          "forecast",
          "market",
          "physical",
          "weather-refute",
          "weather-support",
        ],
        "staleSelectorIds": [],
      },
      "sourceQuality": {
        "currentEvidenceIds": [
          "evidence-control-current",
        ],
        "tierScores": {
          "A": 100,
          "B": 80,
          "C": 50,
        },
      },
    },
    "finalScore": 34,
    "policyVersion": "test-confidence-v1",
    "reasons": [
      "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
      "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
      "没有正权重的支持或反向证据，agreement=0",
    ],
    "roundingRule": "round_half_up_after_weighted_sum",
    "status": "available",
    "weightedScore": 34,
  },
  "cutoff": "2026-09-08T12:00:00.000Z",
  "direction": {
    "direction": "neutral",
    "marketScope": "test scoped market",
    "matchedDirections": [],
    "methodologyVersion": "test-reviewed-v1",
    "policyVersion": "test-direction-v1",
    "reasons": [
      "没有具备方向性证据的已审核规则命中，保留 seed 的有范围默认方向但标记为不可用",
    ],
    "regionDefinitionVersion": "test-region-v1",
    "ruleHits": [],
    "ruleRejections": [
      {
        "code": "CONTEXT_ONLY",
        "reason": "规则 invalidate-control 未命中其 refutes 语义所需的正权重非 control 证据，不能产生市场方向",
        "ruleId": "invalidate-control",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 refute-weather 未匹配当前证据",
        "ruleId": "refute-weather",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 relief-weather 未匹配当前证据",
        "ruleId": "relief-weather",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-balance 未匹配当前证据",
        "ruleId": "support-balance",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-forecast 未匹配当前证据",
        "ruleId": "support-forecast",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-market 未匹配当前证据",
        "ruleId": "support-market",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-physical 未匹配当前证据",
        "ruleId": "support-physical",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-weather 未匹配当前证据",
        "ruleId": "support-weather",
      },
    ],
    "status": "unavailable",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
  "marketScope": "test scoped market",
  "methodologyVersion": "test-reviewed-v1",
  "regionDefinitionVersion": "test-region-v1",
  "stage": "watch",
  "target": "test scoped target",
  "thesisId": "TEST-01",
  "timeHorizon": "next test horizon",
}
`;

exports[`evaluateDirectionAndConfidence > resolves balanced conflicting directions to mixed and applies the unexplained conflict cap 1`] = `
{
  "confidence": {
    "appliedCaps": [
      {
        "code": "UNEXPLAINED_CONFLICT",
        "maximum": 69,
        "reason": "当前同时存在支持与反向证据（包括同一来源内的矛盾），且本版策略未定义可审计的冲突解释，按 PRD 将上限设为 69",
      },
    ],
    "components": {
      "agreement": 0,
      "coverage": 100,
      "freshness": 100,
      "sourceQuality": 100,
    },
    "explanations": {
      "agreement": {
        "ignoredContextEvidenceIds": [],
        "refuteEvidenceIds": [
          "evidence-weather-refute-current",
        ],
        "refuteWeight": 30,
        "supportEvidenceIds": [
          "evidence-weather-support-current",
        ],
        "supportWeight": 30,
      },
      "coverage": {
        "missingLayers": [],
        "presentLayers": [
          "weather",
        ],
        "requiredLayers": [
          "weather",
        ],
        "staleLayers": [],
      },
      "freshness": {
        "currentEvidenceIds": [
          "evidence-weather-refute-current",
          "evidence-weather-support-current",
        ],
        "freshSelectorIds": [
          "weather-refute",
          "weather-support",
        ],
        "lateSelectorIds": [],
        "missingSelectorIds": [],
        "staleSelectorIds": [],
      },
      "sourceQuality": {
        "currentEvidenceIds": [
          "evidence-weather-refute-current",
          "evidence-weather-support-current",
        ],
        "tierScores": {
          "A": 100,
          "B": 80,
          "C": 50,
        },
      },
    },
    "finalScore": 69,
    "policyVersion": "test-confidence-v1",
    "reasons": [
      "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
      "当前同时存在支持与反向证据（包括同一来源内的矛盾），且本版策略未定义可审计的冲突解释，按 PRD 将上限设为 69",
      "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
      "支持与反向权重完全平衡，agreement=0",
    ],
    "roundingRule": "round_half_up_after_weighted_sum",
    "status": "available",
    "weightedScore": 80,
  },
  "cutoff": "2026-09-08T12:00:00.000Z",
  "direction": {
    "direction": "mixed",
    "marketScope": "test scoped market",
    "matchedDirections": [
      "bullish",
      "bearish",
    ],
    "methodologyVersion": "test-reviewed-v1",
    "policyVersion": "test-direction-v1",
    "reasons": [
      "命中多个不同方向 bullish/bearish，按固定冲突规则解析为 mixed",
    ],
    "regionDefinitionVersion": "test-region-v1",
    "ruleHits": [
      {
        "evidenceIds": [
          "evidence-weather-refute-current",
        ],
        "reason": "规则 refute-weather 以 refutes stance 命中，并由审核策略显式映射为 bearish",
        "ruleId": "refute-weather",
      },
      {
        "evidenceIds": [
          "evidence-weather-support-current",
        ],
        "reason": "规则 support-weather 以 supports stance 命中，并由审核策略显式映射为 bullish",
        "ruleId": "support-weather",
      },
    ],
    "ruleRejections": [
      {
        "code": "NOT_MATCHED",
        "reason": "规则 invalidate-control 未匹配当前证据",
        "ruleId": "invalidate-control",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 relief-weather 未匹配当前证据",
        "ruleId": "relief-weather",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-balance 未匹配当前证据",
        "ruleId": "support-balance",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-forecast 未匹配当前证据",
        "ruleId": "support-forecast",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-market 未匹配当前证据",
        "ruleId": "support-market",
      },
      {
        "code": "NOT_MATCHED",
        "reason": "规则 support-physical 未匹配当前证据",
        "ruleId": "support-physical",
      },
    ],
    "status": "available",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
  "marketScope": "test scoped market",
  "methodologyVersion": "test-reviewed-v1",
  "regionDefinitionVersion": "test-region-v1",
  "stage": "weather_realized",
  "target": "test scoped target",
  "thesisId": "TEST-01",
  "timeHorizon": "next test horizon",
}
`;

exports[`evaluateDirectionAndConfidence > treats support-only and refute-only evidence symmetrically 1`] = `
{
  "refute": {
    "confidence": {
      "appliedCaps": [],
      "components": {
        "agreement": 100,
        "coverage": 17,
        "freshness": 14,
        "sourceQuality": 100,
      },
      "explanations": {
        "agreement": {
          "ignoredContextEvidenceIds": [],
          "refuteEvidenceIds": [
            "evidence-weather-refute-current",
          ],
          "refuteWeight": 30,
          "supportEvidenceIds": [],
          "supportWeight": 0,
        },
        "coverage": {
          "missingLayers": [
            "forecast",
            "physical",
            "balance",
            "market",
            "control",
          ],
          "presentLayers": [
            "weather",
          ],
          "requiredLayers": [
            "forecast",
            "weather",
            "physical",
            "balance",
            "market",
            "control",
          ],
          "staleLayers": [],
        },
        "freshness": {
          "currentEvidenceIds": [
            "evidence-weather-refute-current",
          ],
          "freshSelectorIds": [
            "weather-refute",
          ],
          "lateSelectorIds": [],
          "missingSelectorIds": [
            "balance",
            "control",
            "forecast",
            "market",
            "physical",
            "weather-support",
          ],
          "staleSelectorIds": [],
        },
        "sourceQuality": {
          "currentEvidenceIds": [
            "evidence-weather-refute-current",
          ],
          "tierScores": {
            "A": 100,
            "B": 80,
            "C": 50,
          },
        },
      },
      "finalScore": 54,
      "policyVersion": "test-confidence-v1",
      "reasons": [
        "agreement 使用对称净一致度 |support-refute|/(support+refute)，当前为 100",
        "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
        "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
      ],
      "roundingRule": "round_half_up_after_weighted_sum",
      "status": "available",
      "weightedScore": 54,
    },
    "cutoff": "2026-09-08T12:00:00.000Z",
    "direction": {
      "direction": "bearish",
      "marketScope": "test scoped market",
      "matchedDirections": [
        "bearish",
      ],
      "methodologyVersion": "test-reviewed-v1",
      "policyVersion": "test-direction-v1",
      "reasons": [],
      "regionDefinitionVersion": "test-region-v1",
      "ruleHits": [
        {
          "evidenceIds": [
            "evidence-weather-refute-current",
          ],
          "reason": "规则 refute-weather 以 refutes stance 命中，并由审核策略显式映射为 bearish",
          "ruleId": "refute-weather",
        },
      ],
      "ruleRejections": [
        {
          "code": "NOT_MATCHED",
          "reason": "规则 invalidate-control 未匹配当前证据",
          "ruleId": "invalidate-control",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 relief-weather 未匹配当前证据",
          "ruleId": "relief-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-balance 未匹配当前证据",
          "ruleId": "support-balance",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-forecast 未匹配当前证据",
          "ruleId": "support-forecast",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-market 未匹配当前证据",
          "ruleId": "support-market",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-physical 未匹配当前证据",
          "ruleId": "support-physical",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-weather 未匹配当前证据",
          "ruleId": "support-weather",
        },
      ],
      "status": "available",
      "target": "test scoped target",
      "thesisId": "TEST-01",
      "timeHorizon": "next test horizon",
    },
    "marketScope": "test scoped market",
    "methodologyVersion": "test-reviewed-v1",
    "regionDefinitionVersion": "test-region-v1",
    "stage": "watch",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
  "support": {
    "confidence": {
      "appliedCaps": [],
      "components": {
        "agreement": 100,
        "coverage": 100,
        "freshness": 50,
        "sourceQuality": 100,
      },
      "explanations": {
        "agreement": {
          "ignoredContextEvidenceIds": [],
          "refuteEvidenceIds": [],
          "refuteWeight": 0,
          "supportEvidenceIds": [
            "evidence-weather-support-current",
          ],
          "supportWeight": 30,
        },
        "coverage": {
          "missingLayers": [],
          "presentLayers": [
            "weather",
          ],
          "requiredLayers": [
            "weather",
          ],
          "staleLayers": [],
        },
        "freshness": {
          "currentEvidenceIds": [
            "evidence-weather-support-current",
          ],
          "freshSelectorIds": [
            "weather-support",
          ],
          "lateSelectorIds": [],
          "missingSelectorIds": [
            "weather-refute",
          ],
          "staleSelectorIds": [],
        },
        "sourceQuality": {
          "currentEvidenceIds": [
            "evidence-weather-support-current",
          ],
          "tierScores": {
            "A": 100,
            "B": 80,
            "C": 50,
          },
        },
      },
      "finalScore": 88,
      "policyVersion": "test-confidence-v1",
      "reasons": [
        "agreement 使用对称净一致度 |support-refute|/(support+refute)，当前为 100",
        "固定公式：coverage×30% + freshness×25% + sourceQuality×25% + agreement×20%",
        "所有分项和加权总分均使用非负数 round-half-up（0.5 向上）",
      ],
      "roundingRule": "round_half_up_after_weighted_sum",
      "status": "available",
      "weightedScore": 88,
    },
    "cutoff": "2026-09-08T12:00:00.000Z",
    "direction": {
      "direction": "bullish",
      "marketScope": "test scoped market",
      "matchedDirections": [
        "bullish",
      ],
      "methodologyVersion": "test-reviewed-v1",
      "policyVersion": "test-direction-v1",
      "reasons": [],
      "regionDefinitionVersion": "test-region-v1",
      "ruleHits": [
        {
          "evidenceIds": [
            "evidence-weather-support-current",
          ],
          "reason": "规则 support-weather 以 supports stance 命中，并由审核策略显式映射为 bullish",
          "ruleId": "support-weather",
        },
      ],
      "ruleRejections": [
        {
          "code": "NOT_MATCHED",
          "reason": "规则 invalidate-control 未匹配当前证据",
          "ruleId": "invalidate-control",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 refute-weather 未匹配当前证据",
          "ruleId": "refute-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 relief-weather 未匹配当前证据",
          "ruleId": "relief-weather",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-balance 未匹配当前证据",
          "ruleId": "support-balance",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-forecast 未匹配当前证据",
          "ruleId": "support-forecast",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-market 未匹配当前证据",
          "ruleId": "support-market",
        },
        {
          "code": "NOT_MATCHED",
          "reason": "规则 support-physical 未匹配当前证据",
          "ruleId": "support-physical",
        },
      ],
      "status": "available",
      "target": "test scoped target",
      "thesisId": "TEST-01",
      "timeHorizon": "next test horizon",
    },
    "marketScope": "test scoped market",
    "methodologyVersion": "test-reviewed-v1",
    "regionDefinitionVersion": "test-region-v1",
    "stage": "weather_realized",
    "target": "test scoped target",
    "thesisId": "TEST-01",
    "timeHorizon": "next test horizon",
  },
}
`;
